--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.79.0",
     "@vercel/analytics": "^1.5.0",
+    "aos": "^2.3.4",
     "framer-motion": "^12.5.0",
     "geist": "^1.3.1",
     "next": "15.2.2",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
