--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.79.0",
     "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.5.0",
     "geist": "^1.3.1",
     "next": "15.2.2",
@@ -20,6 +22,7 @@
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "sanity": "^3.79.0",
     "sass": "^1.85.1",
