--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.79.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.5.0",
